# iotpipe_kalman

./: .gitignore  CMakeLists.txt  Plotter.cpp  Plotter.h  README.md  helpers.h  iotpipe_kalman.cpp  kalman.h
examples/: kinematics_kalman.cpp  voltage_kalman  voltage_kalman.cpp
src/: WhiteNoiseSystem.cpp  kalman.cpp
src/include/: Plotter.h  WhiteNoiseSystem.h  bivariate.h  kalman.h
